more layout/design fixes to look better on small devices

--- a/src/pages/experience/ExperiencePage.scss
+++ b/src/pages/experience/ExperiencePage.scss
@@ -1,12 +1,9 @@
 #experience-page {
-	color: #eee;
-	background-color: #222;
-
-	padding: 5px;
+	color: #444;
 
 	.experience-page-heading {
 		text-align: center;
-		padding-bottom: 10px;
+		padding: 10px;
 	}
 
 	.content {}
