--- a/src/pages/experience/components/Companies/Companies.scss
+++ b/src/pages/experience/components/Companies/Companies.scss
@@ -1,4 +1,12 @@
 #companies {
 	color: #444;
 	display: flex;
+
+	.MuiBox-root {
+		> div {
+			> div {
+				padding: 3px;
+			}
+		}
+	}
 }
