--- a/src/pages/profile/ProfilePage.scss
+++ b/src/pages/profile/ProfilePage.scss
@@ -12,7 +12,7 @@
 		display: flex;
 		flex-direction: column;
 
-		min-width: 400px;
+		min-width: 360px;
 		max-width: 800px;
 
 		margin-left: auto;
